bppackaging/src/objects/Tax_Exemption__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Tax Item</label>
        <referenceTo>Sales_Tax_Item__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Tax_Exemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tax Exemption</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Tax Exemption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Exemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>